[package]
name = "elgato-keylight"
version = "0.2.0"
edition = "2018"
license = "MIT"
keywords = ["elgato", "keylight", "light", "control"]
categories = ["api-bindings"]
description = "Control the Elgato Keylights series from Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
thiserror = "1.0.28"
zeroconf = "0.10.2"
